--- a/devfile.yaml
+++ b/devfile.yaml
@@ -52,9 +52,12 @@ commands:
       component: mysql
       workingDir: ${PROJECTS_ROOT}/java-spring-petclinic
       commandLine: >-
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/user.sql
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/data.sql
+        echo ">> we are here"
+        pwd
+        ls -la
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/java-spring-petclinic/src/main/resources/db/mysql/user.sql
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/java-spring-petclinic/src/main/resources/db/mysql/schema.sql
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/java-spring-petclinic/src/main/resources/db/mysql/data.sql
         echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
       group:
         kind: run
