--- a/devfile.yaml
+++ b/devfile.yaml
@@ -51,11 +51,11 @@ commands:
     exec:
       component: mysql
       workingDir: ${PROJECTS_ROOT}/java-spring-petclinic
-      commandLine: >-
+      commandLine: |
         echo ">> we are here"
         pwd
         ls -la
-        echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
+        echo -e "\e[32mDone.\e[0m Database petclinic was configured"
       group:
         kind: run
         isDefault: true
