--- a/devfile.yaml
+++ b/devfile.yaml
@@ -66,7 +66,8 @@ commands:
       group:
         kind: build
         isDefault: true
-  - id: run
+
+  - id: run-with-hsqldb
     exec:
       component: tools
       workingDir: ${PROJECTS_ROOT}/java-spring-petclinic
@@ -75,6 +76,19 @@ commands:
       group:
         kind: run
         isDefault: true
+
+  - id: run-with-mysql
+    exec:
+      component: tools
+      workingDir: ${PROJECTS_ROOT}/java-spring-petclinic
+      commandLine: |
+        java -jar -Dspring-boot.run.profiles=mysql \
+        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
+        target/*.jar
+      group:
+        kind: run
+        isDefault: true
+
   - id: run-debug
     exec:
       component: tools
