chore(mysql): add container for launching mysql database
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -33,6 +33,7 @@ components:
       endpoints:
         - exposure: none
           name: db
+          protocol: tcp
           targetPort: 3306
       env:
         - name: MYSQL_USER
